@startuml Decorator_diagram

class Client {
}

interface Component {
    + {abstract} operation()
}

Client -> Component

class ConcreteComponent {
    + operation()
}

Component <|-- ConcreteComponent

class Decorator {
    + operation()
    - component : Component
}

Component <|-- Decorator

class ConcreteDecorator1 {
    + operation()
    + addFunction()
}

Decorator <|-- ConcreteDecorator1

class ConcreteDecorator2 {
    + operation()
    + addFunction()
}

Decorator <|-- ConcreteDecorator2

@enduml
